# tools

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/frank_tools/: __init__.py
src/frank_tools/api/: __init__.py  app.py
src/frank_tools/audio/: __init__.py  m4b_splitter.py
src/frank_tools/cli/: __init__.py  main.py
src/frank_tools/download/: __init__.py  drive.py
src/frank_tools/translate/: __init__.py  google_free.py
tests/: __init__.py  conftest.py
tests/audio/: __init__.py  test_m4b_splitter.py
tests/cli/: test_cli.py
tests/download/: __init__.py  test_drive.py
tests/translate/: __init__.py  test_google_free.py
