[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frank-tools"
version = "0.1.0"
description = "A small toolkit with Drive downloads, translation, audio splitting, and an HTTP API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Frank", email = "frank@example.com" }]
dependencies = [
  "requests",
  "tqdm",
  "fastapi",
  "uvicorn[standard]",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
frank-tools = "frank_tools.cli.main:main"
frank-tools-drive = "frank_tools.download.drive:main"
frank-tools-translate = "frank_tools.translate.google_free:main"
frank-tools-m4b = "frank_tools.audio.m4b_splitter:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frank_tools"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "build", "twine"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
